# AndroidTools

./: .gitignore  CMakeLists.txt  README.md
debain/: control
include/Thread/: flashThreadTool.h  softtools.h  updateThreadTool.h
include/tools/: ADBTools.h  deviceConnect.h  deviceDetailTool.h  flashtool.h  myTypes.h  softManageTool.h
include/widget/: MyCircleProgress.h  deviceControlItem.h  deviceControlWidget.h  deviceImageWidget.h  fileManageWidget.h  flashToolWidget.h  inforPanelWidget.h  mainWindow.h  mybacewidget.h  softwareManageWidget.h  terminalWidget.h  terminaltextedit.h  wirelessConnectWidget.h
res/: myres.qrc
src/: main.cpp
src/AppManage/: appManageWidget.cpp  appManageWidget.h
src/DeviceControl/: deviceControlWidget.cpp  deviceControlWidget.h
src/FlashingTool/: flashingToolWidget.cpp  flashingToolWidget.h
src/Global/: globalType.hpp
src/InfoPanel/: inforPanelWidget.cpp  inforPanelWidget.h
src/MADB/: ADBTools.cpp
src/MComponent/: MButton.cpp  MButton.h  MDialog.cpp  MDialog.h  MNotificationBox.cpp  MProgressBar.cpp  MProgressBar.h  MSwitchButton.cpp  MSwitchButton.h  MTabSwitchButton.cpp
src/MainWindow/: mainWindow.cpp  mainWindow.h
src/ScreenMirroring/: screenMirroringWidget.cpp  screenMirroringWidget.h
src/TerminalTool/: terminalToolWidget.cpp  terminalToolWidget.h
src/Thread/: flashThreadTool.cpp  softtools.cpp  updateThreadTool.cpp
src/test/: mainTest.cpp  mainTestWindow.cpp  mainTestWindow.h
src/tools/: ADBTools.cpp  deviceConnect.cpp  deviceDetailTool.cpp  flashtool.cpp  myTypes.cpp  softManageTool.cpp
src/widget/: MyCircleProgress.cpp  deviceControlItem.cpp  deviceControlWidget.cpp  deviceImageWidget.cpp  fileManageWidget.cpp  flashToolWidget.cpp  inforPanelWidget.cpp  mainWindow.cpp  mybacewidget.cpp  softwareManageWidget.cpp  terminalWidget.cpp  terminaltextedit.cpp  wirelessConnectWidget.cpp
tools/platform-tools/: NOTICE.txt  dmtracedump  etc1tool  fastboot  hprof-conv  make_f2fs  make_f2fs_casefold  mke2fs  sqlite3
